Refactor leadeboard.