@@ -3,14 +3,13 @@ package com.eternalcode.economy.leaderboard;
 import com.eternalcode.economy.account.Account;
 import com.eternalcode.economy.account.database.AccountRepository;
 import com.eternalcode.economy.config.implementation.PluginConfig;
-
 import java.math.BigDecimal;
 import java.time.Instant;
+import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.Collection;
 import java.util.concurrent.CompletableFuture;
 import java.util.stream.Collectors;
 
@@ -19,51 +18,85 @@ public class LeaderboardService {
     private final AccountRepository accountRepository;
     private final PluginConfig pluginConfig;
     private final Map<BigDecimal, List<Account>> topAccounts = new TreeMap<>(Comparator.reverseOrder());
+    private final Object lock = new Object();
+
     private Instant lastUpdated;
 
     public LeaderboardService(AccountRepository accountRepository, PluginConfig pluginConfig) {
         this.accountRepository = accountRepository;
         this.pluginConfig = pluginConfig;
         this.lastUpdated = Instant.now();
-        this.loadLeaderboard();
+        this.initializeLeaderboard();
     }
 
-    private void loadLeaderboard() {
-        this.accountRepository.getAllAccounts().thenAccept(accounts -> {
-            this.topAccounts.clear();
-            this.topAccounts.putAll(accounts.stream()
+    private void initializeLeaderboard() {
+        this.accountRepository.getAllAccounts().thenAccept(this::processAccounts);
+    }
+
+    private void processAccounts(Collection<Account> accounts) {
+        synchronized (this.lock) {
+            Map<BigDecimal, List<Account>> grouped = accounts.stream()
                 .sorted(Comparator.comparing(Account::balance).reversed())
                 .collect(Collectors.groupingBy(
                     Account::balance,
+                    () -> new TreeMap<>(Comparator.reverseOrder()),
                     Collectors.toList()
-                )));
-        });
+                ));
+
+            this.topAccounts.clear();
+            this.topAccounts.putAll(grouped);
+            this.lastUpdated = Instant.now();
+        }
     }
 
     public Collection<Account> getLeaderboard() {
-        return this.topAccounts.values().stream()
-            .flatMap(List::stream)
-            .limit(this.pluginConfig.leaderboardSize)
-            .toList();
+        synchronized (this.lock) {
+            return this.topAccounts.values().stream()
+                .flatMap(List::stream)
+                .limit(this.pluginConfig.leaderboardSize)
+                .collect(Collectors.toList());
+        }
     }
 
     public void updateLeaderboard() {
-        this.loadLeaderboard();
-        this.lastUpdated = Instant.now();
+        this.accountRepository.getAllAccounts().thenAccept(this::processAccounts);
     }
 
-    public Instant lastUpdated() {
+    public Instant getLastUpdated() {
         return this.lastUpdated;
     }
 
     public CompletableFuture<LeaderboardPosition> getLeaderboardPosition(Account targetAccount) {
-        return this.accountRepository.getAllAccounts().thenApply(accounts -> {
-            List<Account> sorted = accounts.stream()
-                .sorted(Comparator.comparing(Account::balance).reversed())
-                .toList();
-            int position = sorted.indexOf(targetAccount) + 1;
+        return CompletableFuture.supplyAsync(() -> {
+            synchronized (this.lock) {
+                BigDecimal targetBalance = targetAccount.balance();
+                int cumulative = 0;
 
-            return new LeaderboardPosition(targetAccount, position);
+                for (Map.Entry<BigDecimal, List<Account>> entry : this.topAccounts.entrySet()) {
+                    BigDecimal currentBalance = entry.getKey();
+                    List<Account> group = entry.getValue();
+
+                    int comparison = currentBalance.compareTo(targetBalance);
+
+                    if (comparison > 0) {
+                        cumulative += group.size();
+                        continue;
+                    }
+
+                    if (comparison == 0) {
+                        for (Account account : group) {
+                            if (account.equals(targetAccount)) {
+                                return new LeaderboardPosition(targetAccount, cumulative + 1);
+                            }
+                        }
+                        return new LeaderboardPosition(targetAccount, -1);
+                    }
+
+                    break;
+                }
+
+                return new LeaderboardPosition(targetAccount, -1);
+            }
         });
     }
 }
